Closed
Bug 378820
Opened 18 years ago
Closed 18 years ago
Crash in addVisit
Categories
(Firefox :: Bookmarks & History, defect)
Firefox
Bookmarks & History
Tracking
()
RESOLVED
FIXED
People
(Reporter: asaf, Assigned: dietrich)
References
Details
Attachments
(1 file)
3.49 KB,
patch
|
asaf
:
review+
|
Details | Diff | Splinter Review |
The following test crashes for me (added to unit/)
// adds a test URI visit to the database
function add_visit(aURI, aTime) {
histsvc.addVisit(aURI,
aTime,
0, // no referrer
histsvc.TRANSITION_TYPED, // user typed in URL bar
false, // not redirect
0);
}
// main
function run_test() {
var testRoot = bmsvc.createFolder(root,
"Result-sort functionality tests root",
bmsvc.DEFAULT_INDEX);
var uri1 = uri("http://foo.tld/a");
var uri2 = uri("http://foo.tld/b");
var id1 = bmsvc.insertItem(testRoot, uri1, bmsvc.DEFAULT_INDEX);
bmsvc.setItemTitle(id1, "b");
add_visit(uri1, Date.now());
I couldn't really write a useful testcase here... nor did i manage to run the unit tests under a debugging enviorment :-/ FWIW, it seems to me like we crash when calling mObservers' onVisit.
Assignee | ||
Comment 1•18 years ago
|
||
Reporter | ||
Comment 2•18 years ago
|
||
Comment on attachment 262912 [details] [diff] [review]
fix
yeah, that's it.
r=mano.
Attachment #262912 -
Flags: review?(mano) → review+
Assignee | ||
Comment 3•18 years ago
|
||
Checking in toolkit/components/places/src/nsNavBookmarks.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavBookmarks.cpp,v <-- nsNavBookmarks.cpp
new revision: 1.82; previous revision: 1.81
done
Checking in toolkit/components/places/tests/bookmarks/test_bookmarks.js;
/cvsroot/mozilla/toolkit/components/places/tests/bookmarks/test_bookmarks.js,v <-- test_bookmarks.js
new revision: 1.6; previous revision: 1.5
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite+
Comment 5•15 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•