Bug 378820  Crash in addVisit (r=mano)